# jamalhansen.com

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  amplify.yml  app.py  blog-validate.toml  convert_to_papermod.py  go.mod  pyproject.toml  test_regex.py
.github/workflows/: scheduled-build.yml
archetypes/: default.md
blog-validate-helpers/: _customers.sql  _events.sql  _global_data.py  _orders.sql  _stats.sql  _vendors.sql  _vip_customers.sql  deals.sql  newsletter_subscribers.sql  posts.sql  salespeople.sql  users.sql
config/_default/: hugo.yaml  menus.yaml  params.yaml
content/: about.md  chat.md  newsletter.md
content/blog/: _index.md  my-first-post.md  testing-for-aws-data-engineer-associate-dea-c01-certification-in-five-days.md
content/finds/: _index.md
content/series/: _index.md
data/: authors.yaml
layouts/: index.html  index.rss.xml
layouts/_default/: home.html  single.html  terms.html
layouts/finds/: list.html  single.html
layouts/partials/: author_bio.html  breadcrumbs.html  cover.html  extend_footer.html  extend_head.html  home_info.html  plausible.html  post_nav_links.html  schema_bc_path_helper.html  series-nav.html  social-embed-block.html
layouts/series/: list.html  term.html
layouts/shortcodes/: author-bio.html  comparison.html  include-html.html  newsletter.html  obsidian-image.html  social-embed.html  tutorial-step.html  unsplash-credit.html
layouts/taxonomy/: list.html  series.terms.html  (+1 more)
scripts/: README.md  check-setup  finds-to-hugo.py  new-find  new-post  obsidian-to-hugo.py
templates/: index.html
(+130 files in other folders)
